[package]
name = "dcf77_chrono"
version = "0.2.1"
edition = "2021"
license = "MIT-open-group	"
description = "Library to code and decode DCF77 bitstreams"
repository = "https://github.com/nachootal/dcf77_chrono"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
